--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Turbodega technical interview",
   "main": "dist/server.js",
   "dependencies": {
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.7"
   },
@@ -20,6 +21,7 @@
   "author": "Joel Davila (joeldrt@gmail.com)",
   "license": "ISC",
   "devDependencies": {
+    "@types/exceljs": "^1.3.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.1",
